--- a/hola.html
+++ b/hola.html
@@ -8,6 +8,9 @@
     <title>Rmas en Git</title>
 </head>
 <body>
+    <header>
+        
+    </header>
     <div class="container">
         <h1>Hola este es mi titulo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quisquam similique libero nemo recusandae nisi architecto placeat laborum accusantium fuga. Laborum animi repudiandae tenetur voluptatem sequi quod! Quibusdam qui dolore culpa vero dignissimos soluta quis suscipit tempore ea doloremque nulla odio incidunt, quod quae atque repellendus nihil odit laudantium minima ut unde, eum labore. Voluptate enim rem ad eligendi accusantium!</p>
