cabecera con azul

--- a/hola.html
+++ b/hola.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        
+        <p>Esta es la mi Cabecera</p>
     </header>
     <div class="container">
         <h1>Hola este es mi titulo</h1>
