footer terminado por devenergylinux

--- a/hola.html
+++ b/hola.html
@@ -18,6 +18,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, beatae fugiat iure cupiditate voluptatum facere veritatis deserunt. Velit qui error temporibus? Dolore libero fuga veniam vitae ducimus commodi unde tempore nesciunt optio blanditiis labore sequi quasi, quos impedit, nihil saepe voluptate voluptatem vero repellat ex accusantium! Consectetur doloribus odio veritatis.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet alias tenetur deserunt dolore facere suscipit atque modi ducimus magnam dolorum aspernatur officiis magni neque ea repudiandae, adipisci, quaerat illum asperiores!</p>
     </div>
+    <div class="footer">
+        <p>ESTE ES EL FOOTER AGREGADODO POR DEVENERGY</p>
+    </div>
     
 </body>
 </html>
