Imagen en header desde cuenta original

--- a/hola.html
+++ b/hola.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="https://picsum.photos/100/100" alt="a random image">
         <p>Esta es la mi Cabecera</p>
     </header>
     <div class="container">
